config/deployment-workflow-manager/workflow-manager_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: service
    app.kubernetes.io/instance: workflow-manager
    app.kubernetes.io/component: workflow-manager
    app.kubernetes.io/created-by: nagare-media-engine
    app.kubernetes.io/part-of: nagare-media-engine
    app.kubernetes.io/managed-by: kustomize
  name: workflow-manager
  namespace: system
spec:
  ports:
    - name: http-metrics
      port: 8080
      protocol: TCP
      targetPort: http-metrics
    - name: http-webhooks
      port: 9443
      protocol: TCP
      targetPort: http-webhooks
  selector:
    app.kubernetes.io/instance: workflow-manager
    app.kubernetes.io/component: workflow-manager
    app.kubernetes.io/part-of: nagare-media-engine
